Resolves: tdf#114572 immediate update of value while typing unwanted

Revert "connect to modified instead of up/down/focus-lost"

This reverts commit 44bfe8fad4f7c263dc713a65fb2ab0e2f9afcf99

Revert "listening to modify is sufficient to get all changes"

This reverts commit 5c0bb1088a678d36309866c4eee43e58901f6b7b

we probably need to distinguish a modify vs update signal to
get what I wanted here. Back to the original mode for now.

Change-Id: I51ebfc96b3a06cf09905f4a311d526f23ce371f1
Reviewed-on: https://gerrit.libreoffice.org/46958
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>