sw/source/ui/frmdlg/wrap.cxx
@@ -90,11 +90,23 @@ SwWrapTabPage::SwWrapTabPage(vcl::Window *pParent, const SfxItemSet &rSet)
 
     SetExchangeSupport();
 
-    Link<Edit&,void> aLk = LINK(this, SwWrapTabPage, RangeModifyHdl);
-    m_pLeftMarginED->SetModifyHdl(aLk);
-    m_pRightMarginED->SetModifyHdl(aLk);
-    m_pTopMarginED->SetModifyHdl(aLk);
-    m_pBottomMarginED->SetModifyHdl(aLk);
+    Link<SpinField&,void> aLk = LINK(this, SwWrapTabPage, RangeModifyHdl);
+    Link<Control&,void> aLk3 = LINK(this, SwWrapTabPage, RangeLoseFocusHdl);
+    m_pLeftMarginED->SetUpHdl(aLk);
+    m_pLeftMarginED->SetDownHdl(aLk);
+    m_pLeftMarginED->SetLoseFocusHdl(aLk3);
+
+    m_pRightMarginED->SetUpHdl(aLk);
+    m_pRightMarginED->SetDownHdl(aLk);
+    m_pRightMarginED->SetLoseFocusHdl(aLk3);
+
+    m_pTopMarginED->SetUpHdl(aLk);
+    m_pTopMarginED->SetDownHdl(aLk);
+    m_pTopMarginED->SetLoseFocusHdl(aLk3);
+
+    m_pBottomMarginED->SetUpHdl(aLk);
+    m_pBottomMarginED->SetDownHdl(aLk);
+    m_pBottomMarginED->SetLoseFocusHdl(aLk3);
 
     Link<Button*,void> aLk2 = LINK(this, SwWrapTabPage, WrapTypeHdl);
     m_pNoWrapRB->SetClickHdl(aLk2);
@@ -552,7 +564,12 @@ DeactivateRC SwWrapTabPage::DeactivatePage(SfxItemSet* _pSet)
     return DeactivateRC::LeavePage;
 }
 
-IMPL_LINK( SwWrapTabPage, RangeModifyHdl, Edit&, rSpin, void )
+// range check
+IMPL_LINK( SwWrapTabPage, RangeLoseFocusHdl, Control&, rControl, void )
+{
+    RangeModifyHdl( static_cast<SpinField&>(rControl) );
+}
+IMPL_LINK( SwWrapTabPage, RangeModifyHdl, SpinField&, rSpin, void )
 {
     MetricField& rEdit = static_cast<MetricField&>(rSpin);
     sal_Int64 nValue = rEdit.GetValue();
