sw/source/uibase/inc/prcntfld.hxx
@@ -23,7 +23,7 @@
 #include <swdllapi.h>
 #include "uitool.hxx"
 
-//Wraps a MetricField with extra features
+//Wraps a MetricField with extra features, preferred to PercentField
 class SW_DLLPUBLIC PercentField
 {
     VclPtr<MetricField> m_pField;
@@ -48,6 +48,8 @@ public:
     void set(MetricField *pField);
     const MetricField* get() const { return m_pField; }
     MetricField* get() { return m_pField; }
+    void SetUpHdl(const Link<SpinField&,void>& rLink) { m_pField->SetUpHdl(rLink); }
+    void SetDownHdl(const Link<SpinField&,void>& rLink) { m_pField->SetDownHdl(rLink); }
     void SetModifyHdl(const Link<Edit&,void>& rLink) { m_pField->SetModifyHdl(rLink); }
     void SetLoseFocusHdl(const Link<Control&,void>& rLink) { m_pField->SetLoseFocusHdl(rLink); }
     void SetMetric(FieldUnit eUnit) { ::SetMetric(*m_pField, eUnit); }
