sw/source/uibase/table/tablepg.hxx
@@ -74,7 +74,8 @@ class SwFormatTablePage : public SfxTabPage
     DECL_LINK( AutoClickHdl, Button*, void );
     DECL_LINK( RelWidthClickHdl, Button*, void );
     void RightModify();
-    DECL_LINK( UpDownHdl, Edit&, void );
+    DECL_LINK( UpDownHdl, SpinField&, void );
+    DECL_LINK( LoseFocusHdl, Control&, void );
 
     using TabPage::ActivatePage;
     using TabPage::DeactivatePage;
@@ -119,7 +120,9 @@ class SwTableColumnPage : public SfxTabPage
     void        Init(bool bWeb);
     DECL_LINK( AutoClickHdl, Button *, void );
     void        ModifyHdl( MetricField const * pEdit );
-    DECL_LINK(ModifyHdl, Edit&, void);
+    DECL_LINK( UpHdl, SpinField&, void );
+    DECL_LINK( DownHdl, SpinField&, void );
+    DECL_LINK( LoseFocusHdl, Control&, void );
     DECL_LINK( ModeHdl, Button *, void );
     void        UpdateCols( sal_uInt16 nAktPos );
     SwTwips     GetVisibleWidth(sal_uInt16 nPos);
